<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actress_num"
        android:icon="@drawable/ic_people_white_24dp"
        android:title="@string/actress_num"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_action"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_action"
        app:showAsAction="always" />
    <item
        android:id="@+id/view_size"
        android:title="@string/view_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/page"
        android:title="@string/page"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        app:showAsAction="never" />
</menu>